FIX: Fields a little too wide on FormWide, was causing wrapping.
git-svn-id: http://svn.resourcespace.com/svn/rs/trunk@10285 c08608d7-6e46-0410-86ca-f2a6f1370df5

--- a/css/global.css
+++ b/css/global.css
@@ -343,7 +343,7 @@ a:hover .fa,.fa:hover {text-decoration:none !important;} /* Never underline a Fo
 
 .FormWide .Question label{width: 20%}
 .FormWide .Question .Inline label { width: auto; }
-.FormWide .Question .stdwidth, .FormWide .Question .tickset{width: 80%}
+.FormWide .Question .stdwidth, .FormWide .Question .tickset{width: 70%}
 .FormWide .Question .tickset .stdwidth{width: 99%}
 .FormWide .Question .FormHelp {margin: 0px 10px 10px 20%;}
 .FormWide .Question .FormHelp .FormHelpInner {width: 99%}
